# synology-mcp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml
src/: auth.rs  main.rs  server.rs
src/dsm/: client.rs  mod.rs  storage.rs  system.rs
